--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "build": "gulp clean && gulp build && gulp link",
     "build:watch": "gulp watch",
     "clean": "gulp clean && gulp link --clean",
+    "update": "npm install --save-dev @league-of-foundry-developers/foundry-vtt-types@fvtt-0.8.9",
     "lint": "eslint --ext .ts,.js,.vue .",
     "lintfix": "eslint --fix --ext .ts,.js,.vue ./",
     "prettier-format": "prettier --config .prettierrc --write \"./**/*.(ts|js|json|scss|css)\""
   },
+  "author": "",
   "license": "",
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-9",
+    "@types/jquery": "^3.5.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "archiver": "^5.2.0",
     "chalk": "^4.1.2",
+    "del": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-jquery": "^3.0.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "fs-extra": "^9.1.0",
@@ -32,11 +40,12 @@
     "gulp-git": "^2.10.1",
     "gulp-less": "^4.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^4.1.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "json-stringify-pretty-compact": "^2.0.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.42.0",
+    "prettier": "^2.5.0",
+    "sass": "^1.44.0",
     "yargs": "^15.4.1"
   },
   "lint-staged": {
@@ -44,7 +53,6 @@
     "*.(json|scss)": "prettier --write"
   },
   "dependencies": {
-    "del": "^6.0.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.2"
   }
 }
